Interpreter/EsJSParser.py
# Generated from EsJS.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class EsJSParser ( Parser ):

    grammarFileName = "EsJS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'mut'", "'const'", "'var'", "'funcion'", 
                     "'retornar'", "'si'", "'sino'", "'mientras'", "'para'", 
                     "'elegir'", "'caso'", "'porDefecto'", "'romper'", "'ambiente'", 
                     "'hacer'", "'continuar'", "'intentar'", "'capturar'", 
                     "'crear'", "'Arreglo'", "'Cadena'", "'Matriz'", "'Mate'", 
                     "'Numero'", "'Booleano'", "'consola'", "'NuN'", "'verdadero'", 
                     "'falso'", "'nulo'", "'indefinido'", "'Infinito'", 
                     "'==='", "'!=='", "'=='", "'!='", "'<='", "'>='", "'=>'", 
                     "'&&'", "'||'", "'+='", "'++'", "'?'", "'-='", "'*='", 
                     "'/='", "'%='", "'--'", "'='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'<'", "'>'", "'!'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "';'", "','", "':'", "'.'" ]

    symbolicNames = [ "<INVALID>", "MUT", "CONST", "VAR", "FUNCION", "RETORNAR", 
                      "SI", "SINO", "MIENTRAS", "PARA", "ELEGIR", "CASO", 
                      "POR_DEFECTO", "ROMPER", "AMBIENTE", "HACER", "CONTINUAR", 
                      "INTENTAR", "CAPTURAR", "CREAR", "ARREGLO", "CADENA", 
                      "MATRIZ", "MATE", "NUMERO", "BOOLEANO", "CONSOLA", 
                      "NAN", "VERDADERO", "FALSO", "NULO", "INDEFINIDO", 
                      "INFINITO", "STRICT_EQ", "STRICT_NEQ", "EQUAL", "NEQ", 
                      "LEQ", "GEQ", "ARROW", "AND", "OR", "PLUS_ASSIGN", 
                      "INCREMENT", "TERNARY", "MINUS_ASSIGN", "TIMES_ASSIGN", 
                      "DIV_ASSIGN", "MOD_ASSIGN", "DECREMENT", "ASSIGN", 
                      "PLUS", "MINUS", "TIMES", "DIV", "MOD", "LESS", "GREATER", 
                      "NOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
                      "RBRACKET", "SEMICOLON", "COMMA", "COLON", "PERIOD", 
                      "NUMBER", "STRING", "ID", "COMMENT_SL", "COMMENT_ML", 
                      "WS" ]

    RULE_programa = 0
    RULE_stmt = 1
    RULE_declKeyword = 2
    RULE_declList = 3
    RULE_declInit = 4
    RULE_sinoOpt = 5
    RULE_sinoTail = 6
    RULE_blockStmt = 7
    RULE_paraInit = 8
    RULE_casoList = 9
    RULE_exprOCrear = 10
    RULE_crearType = 11
    RULE_expr = 12
    RULE_factor = 13
    RULE_arrowBody = 14
    RULE_consolaCall = 15
    RULE_consolaMethod = 16
    RULE_paramsOpt = 17
    RULE_argsOpt = 18
    RULE_arrayArgsOpt = 19
    RULE_objElements = 20
    RULE_objProp = 21

    ruleNames =  [ "programa", "stmt", "declKeyword", "declList", "declInit", 
                   "sinoOpt", "sinoTail", "blockStmt", "paraInit", "casoList", 
                   "exprOCrear", "crearType", "expr", "factor", "arrowBody", 
                   "consolaCall", "consolaMethod", "paramsOpt", "argsOpt", 
                   "arrayArgsOpt", "objElements", "objProp" ]

    EOF = Token.EOF
    MUT=1
    CONST=2
    VAR=3
    FUNCION=4
    RETORNAR=5
    SI=6
    SINO=7
    MIENTRAS=8
    PARA=9
    ELEGIR=10
    CASO=11
    POR_DEFECTO=12
    ROMPER=13
    AMBIENTE=14
    HACER=15
    CONTINUAR=16
    INTENTAR=17
    CAPTURAR=18
    CREAR=19
    ARREGLO=20
    CADENA=21
    MATRIZ=22
    MATE=23
    NUMERO=24
    BOOLEANO=25
    CONSOLA=26
    NAN=27
    VERDADERO=28
    FALSO=29
    NULO=30
    INDEFINIDO=31
    INFINITO=32
    STRICT_EQ=33
    STRICT_NEQ=34
    EQUAL=35
    NEQ=36
    LEQ=37
    GEQ=38
    ARROW=39
    AND=40
    OR=41
    PLUS_ASSIGN=42
    INCREMENT=43
    TERNARY=44
    MINUS_ASSIGN=45
    TIMES_ASSIGN=46
    DIV_ASSIGN=47
    MOD_ASSIGN=48
    DECREMENT=49
    ASSIGN=50
    PLUS=51
    MINUS=52
    TIMES=53
    DIV=54
    MOD=55
    LESS=56
    GREATER=57
    NOT=58
    LPAREN=59
    RPAREN=60
    LBRACE=61
    RBRACE=62
    LBRACKET=63
    RBRACKET=64
    SEMICOLON=65
    COMMA=66
    COLON=67
    PERIOD=68
    NUMBER=69
    STRING=70
    ID=71
    COMMENT_SL=72
    COMMENT_ML=73
    WS=74

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(EsJSParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EsJSParser.StmtContext)
            else:
                return self.getTypedRuleContext(EsJSParser.StmtContext,i)


        def getRuleIndex(self):
            return EsJSParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = EsJSParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -6046082491155748994) != 0) or ((((_la - 65)) & ~0x3f) == 0 and ((1 << (_la - 65)) & 113) != 0):
                self.state = 44
                self.stmt()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(EsJSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declKeyword(self):
            return self.getTypedRuleContext(EsJSParser.DeclKeywordContext,0)


        def declList(self):
            return self.getTypedRuleContext(EsJSParser.DeclListContext,0)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(EsJSParser.SEMICOLON)
            else:
                return self.getToken(EsJSParser.SEMICOLON, i)

        def SI(self):
            return self.getToken(EsJSParser.SI, 0)

        def LPAREN(self):
            return self.getToken(EsJSParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EsJSParser.ExprContext)
            else:
                return self.getTypedRuleContext(EsJSParser.ExprContext,i)


        def RPAREN(self):
            return self.getToken(EsJSParser.RPAREN, 0)

        def blockStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EsJSParser.BlockStmtContext)
            else:
                return self.getTypedRuleContext(EsJSParser.BlockStmtContext,i)


        def sinoOpt(self):
            return self.getTypedRuleContext(EsJSParser.SinoOptContext,0)


        def MIENTRAS(self):
            return self.getToken(EsJSParser.MIENTRAS, 0)

        def HACER(self):
            return self.getToken(EsJSParser.HACER, 0)

        def PARA(self):
            return self.getToken(EsJSParser.PARA, 0)

        def paraInit(self):
            return self.getTypedRuleContext(EsJSParser.ParaInitContext,0)


        def ELEGIR(self):
            return self.getToken(EsJSParser.ELEGIR, 0)

        def LBRACE(self):
            return self.getToken(EsJSParser.LBRACE, 0)

        def casoList(self):
            return self.getTypedRuleContext(EsJSParser.CasoListContext,0)


        def RBRACE(self):
            return self.getToken(EsJSParser.RBRACE, 0)

        def ROMPER(self):
            return self.getToken(EsJSParser.ROMPER, 0)

        def CONTINUAR(self):
            return self.getToken(EsJSParser.CONTINUAR, 0)

        def INTENTAR(self):
            return self.getToken(EsJSParser.INTENTAR, 0)

        def CAPTURAR(self):
            return self.getToken(EsJSParser.CAPTURAR, 0)

        def FUNCION(self):
            return self.getToken(EsJSParser.FUNCION, 0)

        def ID(self):
            return self.getToken(EsJSParser.ID, 0)

        def paramsOpt(self):
            return self.getTypedRuleContext(EsJSParser.ParamsOptContext,0)


        def RETORNAR(self):
            return self.getToken(EsJSParser.RETORNAR, 0)

        def consolaCall(self):
            return self.getTypedRuleContext(EsJSParser.ConsolaCallContext,0)


        def getRuleIndex(self):
            return EsJSParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = EsJSParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.declKeyword()
                self.state = 53
                self.declList()
                self.state = 55
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 54
                    self.match(EsJSParser.SEMICOLON)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.match(EsJSParser.SI)
                self.state = 58
                self.match(EsJSParser.LPAREN)
                self.state = 59
                self.expr(0)
                self.state = 60
                self.match(EsJSParser.RPAREN)
                self.state = 61
                self.blockStmt()
                self.state = 62
                self.sinoOpt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.match(EsJSParser.MIENTRAS)
                self.state = 65
                self.match(EsJSParser.LPAREN)
                self.state = 66
                self.expr(0)
                self.state = 67
                self.match(EsJSParser.RPAREN)
                self.state = 68
                self.blockStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.match(EsJSParser.HACER)
                self.state = 71
                self.blockStmt()
                self.state = 72
                self.match(EsJSParser.MIENTRAS)
                self.state = 73
                self.match(EsJSParser.LPAREN)
                self.state = 74
                self.expr(0)
                self.state = 75
                self.match(EsJSParser.RPAREN)
                self.state = 77
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 76
                    self.match(EsJSParser.SEMICOLON)


                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 79
                self.match(EsJSParser.PARA)
                self.state = 80
                self.match(EsJSParser.LPAREN)
                self.state = 81
                self.paraInit()
                self.state = 82
                self.match(EsJSParser.SEMICOLON)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((((_la - 14)) & ~0x3f) == 0 and ((1 << (_la - 14)) & 252958455450038209) != 0):
                    self.state = 83
                    self.expr(0)


                self.state = 86
                self.match(EsJSParser.SEMICOLON)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((((_la - 14)) & ~0x3f) == 0 and ((1 << (_la - 14)) & 252958455450038209) != 0):
                    self.state = 87
                    self.expr(0)


                self.state = 90
                self.match(EsJSParser.RPAREN)
                self.state = 91
                self.blockStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.match(EsJSParser.ELEGIR)
                self.state = 94
                self.match(EsJSParser.LPAREN)
                self.state = 95
                self.expr(0)
                self.state = 96
                self.match(EsJSParser.RPAREN)
                self.state = 97
                self.match(EsJSParser.LBRACE)
                self.state = 98
                self.casoList()
                self.state = 99
                self.match(EsJSParser.RBRACE)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 101
                self.match(EsJSParser.ROMPER)
                self.state = 103
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 102
                    self.match(EsJSParser.SEMICOLON)


                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 105
                self.match(EsJSParser.CONTINUAR)
                self.state = 107
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 106
                    self.match(EsJSParser.SEMICOLON)


                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 109
                self.match(EsJSParser.INTENTAR)
                self.state = 110
                self.blockStmt()
                self.state = 111
                self.match(EsJSParser.CAPTURAR)
                self.state = 112
                self.blockStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 114
                self.match(EsJSParser.FUNCION)
                self.state = 115
                self.match(EsJSParser.ID)
                self.state = 116
                self.match(EsJSParser.LPAREN)
                self.state = 117
                self.paramsOpt()
                self.state = 118
                self.match(EsJSParser.RPAREN)
                self.state = 119
                self.blockStmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 121
                self.match(EsJSParser.RETORNAR)
                self.state = 123
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 122
                    self.expr(0)


                self.state = 126
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 125
                    self.match(EsJSParser.SEMICOLON)


                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 128
                self.consolaCall()
                self.state = 130
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 129
                    self.match(EsJSParser.SEMICOLON)


                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 132
                self.blockStmt()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 133
                self.expr(0)
                self.state = 135
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 134
                    self.match(EsJSParser.SEMICOLON)


                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 137
                self.match(EsJSParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclKeywordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MUT(self):
            return self.getToken(EsJSParser.MUT, 0)

        def CONST(self):
            return self.getToken(EsJSParser.CONST, 0)

        def VAR(self):
            return self.getToken(EsJSParser.VAR, 0)

        def getRuleIndex(self):
            return EsJSParser.RULE_declKeyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclKeyword" ):
                listener.enterDeclKeyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclKeyword" ):
                listener.exitDeclKeyword(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclKeyword" ):
                return visitor.visitDeclKeyword(self)
            else:
                return visitor.visitChildren(self)




    def declKeyword(self):

        localctx = EsJSParser.DeclKeywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declKeyword)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(EsJSParser.ID)
            else:
                return self.getToken(EsJSParser.ID, i)

        def declInit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EsJSParser.DeclInitContext)
            else:
                return self.getTypedRuleContext(EsJSParser.DeclInitContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(EsJSParser.COMMA)
            else:
                return self.getToken(EsJSParser.COMMA, i)

        def getRuleIndex(self):
            return EsJSParser.RULE_declList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclList" ):
                listener.enterDeclList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclList" ):
                listener.exitDeclList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclList" ):
                return visitor.visitDeclList(self)
            else:
                return visitor.visitChildren(self)




    def declList(self):

        localctx = EsJSParser.DeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(EsJSParser.ID)
            self.state = 143
            self.declInit()
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==66:
                self.state = 144
                self.match(EsJSParser.COMMA)
                self.state = 145
                self.match(EsJSParser.ID)
                self.state = 146
                self.declInit()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(EsJSParser.ASSIGN, 0)

        def exprOCrear(self):
            return self.getTypedRuleContext(EsJSParser.ExprOCrearContext,0)


        def getRuleIndex(self):
            return EsJSParser.RULE_declInit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclInit" ):
                listener.enterDeclInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclInit" ):
                listener.exitDeclInit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclInit" ):
                return visitor.visitDeclInit(self)
            else:
                return visitor.visitChildren(self)




    def declInit(self):

        localctx = EsJSParser.DeclInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declInit)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [50]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(EsJSParser.ASSIGN)
                self.state = 153
                self.exprOCrear()
                pass
            elif token in [-1, 1, 2, 3, 4, 5, 6, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 51, 52, 58, 59, 61, 62, 63, 65, 66, 69, 70, 71]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SinoOptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINO(self):
            return self.getToken(EsJSParser.SINO, 0)

        def sinoTail(self):
            return self.getTypedRuleContext(EsJSParser.SinoTailContext,0)


        def getRuleIndex(self):
            return EsJSParser.RULE_sinoOpt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSinoOpt" ):
                listener.enterSinoOpt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSinoOpt" ):
                listener.exitSinoOpt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSinoOpt" ):
                return visitor.visitSinoOpt(self)
            else:
                return visitor.visitChildren(self)




    def sinoOpt(self):

        localctx = EsJSParser.SinoOptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_sinoOpt)
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(EsJSParser.SINO)
                self.state = 158
                self.sinoTail()
                pass
            elif token in [-1, 1, 2, 3, 4, 5, 6, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 51, 52, 58, 59, 61, 62, 63, 65, 69, 70, 71]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SinoTailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(EsJSParser.SI, 0)

        def LPAREN(self):
            return self.getToken(EsJSParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(EsJSParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(EsJSParser.RPAREN, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(EsJSParser.BlockStmtContext,0)


        def sinoOpt(self):
            return self.getTypedRuleContext(EsJSParser.SinoOptContext,0)


        def getRuleIndex(self):
            return EsJSParser.RULE_sinoTail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSinoTail" ):
                listener.enterSinoTail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSinoTail" ):
                listener.exitSinoTail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSinoTail" ):
                return visitor.visitSinoTail(self)
            else:
                return visitor.visitChildren(self)




    def sinoTail(self):

        localctx = EsJSParser.SinoTailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sinoTail)
        try:
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.match(EsJSParser.SI)
                self.state = 163
                self.match(EsJSParser.LPAREN)
                self.state = 164
                self.expr(0)
                self.state = 165
                self.match(EsJSParser.RPAREN)
                self.state = 166
                self.blockStmt()
                self.state = 167
                self.sinoOpt()
                pass
            elif token in [61]:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.blockStmt()
                pass
            else:
                raise NoViableAltException(self)
